# docs/swagger.yaml
@@ -1253,6 +1253,33 @@ paths:
       summary: 应用Id获取流程信息
       tags:
       - Application
+  /workspace/application/select/workFlowByworkspaceId:
+    get:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: ' 工作空间Id(可以多个，以 '','' 分隔开) 例：''1,2,3,4'''
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 错误码 （1017::数据接收失败,1023::数据不存在或查询失败)
+          schema:
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/application.SdWorkflowApplication'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 根据应用Id获取全部流程
+      tags:
+      - Application
   /workspace/application/select/workspace:
     get:
       consumes:
